--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
     <section class="first-section">
         <div class="top-banner">
-        <h1 class="head-one">Let"s Help Those Who Are More In Need</h1>
+        <h1 class="head-one">Let"s Help Those Who Are<br> More In Need</h1>
         <p class="first-paragraph">Your donation can help us supply water and sanitation kits, including soap, water purification tablets, jerry cans, sanitary napkins, and buckets, to ensure that children and their families<br> have access to clean water and hygiene items during and after the floods. </p>
         <br>
         <a class="button" target="_blank" href="https://help.unicef.org/bangladesh-floods-children?country=BD&gclid=CjwKCAjwwo-WBhAMEiwAV4dybfkkL9i7TSk3vDMJbt-BstA0-JdzIS9osQmdllbFsoL458cDbjec4hoCXg0QAvD_BwE">Donate Now</a>
