--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gulzar&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
     <section class="first-section">
         <div class="top-banner">
         <h1 class="head-one">Let"s Help Those Who Are<br> More In Need</h1>
@@ -73,9 +77,35 @@
                 <p>Today, millions people around the world will go to bed on an empty stomach. But your gift means that one less child will be at risk of starvation tonight. You can change a life forever today. Often, one meal at the right time will be enough to make a difference between life and death. </p>
             </div>
         </div>
-
     </section>
-<body>
+    <section class="second-section">
+        <div class="banner-three">
+            <div>
+                <h2 class="head-two">Make a difference today</h2>
+                <p class="second-paragraph"><span class="difference">“Giving is not just about making a donation. It is about making a difference</span>”You made it this far, which shows your drive and conviction to make a difference. Don't forget that your charitable donation, no matter the size, will make a difference in someone's life.<br> Make your special day even more significant by using it as an opportunity to support children and families in need. </p><br>
+                <a class="button" target="_blank" href="https://help.unicef.org/bangladesh-floods-children?country=BD&gclid=CjwKCAjwwo-WBhAMEiwAV4dybfkkL9i7TSk3vDMJbt-BstA0-JdzIS9osQmdllbFsoL458cDbjec4hoCXg0QAvD_BwE">Support Us</a>
+            </div>
+            <div>
+                <img src="images/donation10.jpg" alt="donation">
+            </div>
+        </div>
+    </section>
     
+        <div class="mid-banner">
+            <h2 class="head-two">Get My Updates</h2>
+            <p class="second-paragraph">For your transaction updates and other informations, <span class="difference">"Subscribe Here"</span><br> Stay with us.</p>
+        </div>
+        <div class="subscribe-box">
+            <form class="form-mid">
+                <input type="text" name="" placeholder="E-mail">
+                <button>Subscribe</button>
+            </form>
+        </div>
+
+    <footer>
+        <h3>Be Humble</h3>
+        <p>Copyright@2022</p>
+    </footer>
+  
 </body>
 </html>
