--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <section class="second-section">
         <div class="banner-three">
-            <div>
+            <div class="support-div">
                 <h2 class="head-two">Make a difference today</h2>
                 <p class="second-paragraph"><span class="difference">“Giving is not just about making a donation. It is about making a difference</span>”You made it this far, which shows your drive and conviction to make a difference. Don't forget that your charitable donation, no matter the size, will make a difference in someone's life.<br> Make your special day even more significant by using it as an opportunity to support children and families in need. </p><br>
                 <a class="button" target="_blank" href="https://help.unicef.org/bangladesh-floods-children?country=BD&gclid=CjwKCAjwwo-WBhAMEiwAV4dybfkkL9i7TSk3vDMJbt-BstA0-JdzIS9osQmdllbFsoL458cDbjec4hoCXg0QAvD_BwE">Support Us</a>
@@ -88,11 +88,17 @@
             <div>
                 <img src="images/donation10.jpg" alt="donation">
             </div>
+            <div class="support-div">
+                <h2 class="head-two">Do Things For Others </h2>
+                <p class="second-paragraph">Helping others is not only good for them and a good thing to do, it also makes us happier and healthier too.
+                    Giving also connects us to others, creating stronger communities and helping to build a happier society for everyone. And it's not all about money - we can also give our time, ideas and energy.<br><span class="difference">So if you want to feel good, do good!</span></p><br>
+                <a class="button" target="_blank" href="https://help.unicef.org/bangladesh-floods-children?country=BD&gclid=CjwKCAjwwo-WBhAMEiwAV4dybfkkL9i7TSk3vDMJbt-BstA0-JdzIS9osQmdllbFsoL458cDbjec4hoCXg0QAvD_BwE">Learn More...</a>
+            </div>
         </div>
     </section>
     
         <div class="mid-banner">
-            <h2 class="head-two">Get My Updates</h2>
+            <h2 class="head-two">Get Our Updates</h2>
             <p class="second-paragraph">For your transaction updates and other informations, <span class="difference">"Subscribe Here"</span><br> Stay with us.</p>
         </div>
         <div class="subscribe-box">
@@ -104,7 +110,7 @@
 
     <footer>
         <h3>Be Humble</h3>
-        <p>Copyright@2022</p>
+        <p>Copyright_Yeamin@2022</p>
     </footer>
   
 </body>
